Add paganation and filter for customers